--- a/bootstrap.css
+++ b/bootstrap.css
@@ -7,7 +7,7 @@
  *
  * Designed and built with all the love in the world @twitter by @mdo and @fat.
  */
-TESTAAAA
+TEST
 /*! normalize.css v2.1.0 | MIT License | git.io/normalize */
 article,
 aside,
